--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
 #bodyHeader{
     height: 65vh;
     opacity: 0.8;
-    background-image: url(../images/HeaderBackground.jpeg);
+    background-image: url(../images/HeaderBackground.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -19,6 +19,7 @@ body{
 .HList{
     list-style: none;
     padding-left: 0px;
+    margin: 0px;
 }
 
 .HList li{
@@ -31,15 +32,47 @@ body{
     color:  white;
     text-decoration: none;
     font-family: sans-serif;
-    font-size: 25px;
-    transition:color 0.5s,border-bottom 0.5s;
+    font-size: 1.5rem;
+
+    
 }
 
 .text-center{
     text-align: center;
 }
 
-.HList li a:hover{
+.nav-menu li a:hover{
     color: #efefef;
     border-bottom: 2px solid #efefef;
 }
+
+.nav-menu li a{
+    transition:color 0.5s,border-bottom 0.5s;
+}
+
+/* Name and Social Icons */
+
+#name-social-container{
+    margin-top: 20vh;
+}
+
+#my-name{
+    font-size: 3rem;
+    letter-spacing: 0.1rem;
+    color: white;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+    font-family: sans-serif;
+}
+
+.social-icons li a i{
+    padding: 10px;
+    font-size: 1rem;
+    border-radius: 50%;
+}
+
+.social-icons li a i:hover{
+    box-shadow: 0px 0px 4px 4px rgba(223, 219, 219, 0.2);
+}
+
+/* About section */
