--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body{
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    padding-top: 1.8rem;
 
 }
 
@@ -24,17 +25,14 @@ body{
 
 .HList li{
     display: inline-block;
-    margin-left: 8px;
-    margin-right: 8px;
+    margin: 0px 10px 10px 0px;
+    font-weight: 100;
+    font-size: 1.25rem;
 }
-
 .HList li a {
     color:  white;
     text-decoration: none;
     font-family: sans-serif;
-    font-size: 1.5rem;
-
-    
 }
 
 .text-center{
@@ -66,9 +64,10 @@ body{
 }
 
 .social-icons li a i{
-    padding: 10px;
+    padding: 5px;
     font-size: 1rem;
     border-radius: 50%;
+    margin-top: 4vh;
 }
 
 .social-icons li a i:hover{
@@ -76,3 +75,42 @@ body{
 }
 
 /* About section */
+#about{
+    height: auto;
+    width: 100%;
+    position: relative;
+}
+
+#my-image{
+    height: 12rem;
+    width: 12rem;
+    margin: auto;
+    margin-top: -13vh;
+}
+
+#my-image img{
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    border: 1.5px solid white;
+    box-shadow:0px 0px 15px rgb(201, 200, 200);
+}
+
+/* About Info section */
+#my-info{
+    width:50vw;
+    margin: auto;
+    padding-top:30px;
+}
+
+#my-info p{
+    font-size: 22px;
+    font-family: sans-serif;
+    line-height: 1.8rem;
+    color: grey;
+}
+
+#my-info span{
+    color: #2857a4;
+    font-weight: 600;
+}
