--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,114 @@ section:nth-child(2n){
     vertical-align: middle;
 }
 
+/* Work Experience Section */
+
+.timeline{
+    position: relative;
+    width: 75%;
+    /* border: 2px solid red; */
+}
+
+.timeline-box{
+    padding: 5px;
+    position: relative;
+    width: 40%;
+    left: 5%;
+    min-height: 150px;  
+    /* border: 2px solid #0abcf9; */
+    margin:5px;
+    text-align: right;
+}
+
+.timeline-box::after{
+    content: '';
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: lightgrey;
+    top: 35%;
+    border-radius: 50%;
+    z-index:1;
+}
+
+.timeline-box:nth-child(2n){
+    left:53%;
+}
+
+.timeline-box:nth-child(2n+1)::after {
+    right: -10%;
+}
+
+.timeline-box:nth-child(2n)::after {
+    left:-9.7%;
+}
+
+#timeline-divider{
+    position: absolute;
+    width: 0;
+    top: 8%;
+    left: 50%;
+    border: 1px dashed #0096fa6b;
+    height: 75%;
+    color: #433e3f;
+}
+
+#timeline-divider .timeline-tracker{
+    position: sticky;
+    top:135px;
+    z-index: 2;
+}
+
+#timeline-divider i {
+    transform: rotate(90deg);
+  	margin-top: -35px;
+    display: block;
+    color: #2857a4;
+}
+
+.timeline-container{
+    padding:8px;
+}
+
+.timeline-logo{
+    position: absolute;
+    width: 50px;
+    overflow: hidden;
+}
+
+.timeline-logo > img{
+    width: 100%;
+}
+
+.experience-designation{
+    font-size: 1.4rem;
+}
+
+.experience-company-name{
+    margin:5px 0 0 ;
+    color: #eb822d;
+    font-weight: 400;
+    font-size: 1.2rem;
+}
+
+.experience-duration{
+    color:#9e9b9b;
+    font-weight: 100;
+    color: grey;
+    font-size: 1rem;
+}
+
+.experience-description{
+    font-size: 14px;
+    padding: 2px;
+    color: grey;
+    line-height: 20px;
+}
+.text-align-justify{
+    text-align: justify;
+}
+
+
 /* Portfolio Section */
 
 #portfolio-container{
